<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SimpleTodosActivity!</string>
    <string name="app_name">SimpleTodos</string>
    
    <string name="main_title_text">작업 목록</string>
    <string name="main_addbtn_text">작업 추가</string>
    <string name="main_delbtn_text">작업 삭제</string>
    
    <string name="addtodo_title_text">작업을 추가하세요.</string>
    <string name="addtodo_ok_text">확인</string>
    <string name="addtodo_cancel_text">취소</string>
    
</resources>
