<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/addtodo_title_text"
		/>
		
	<EditText 
		android:id="@+id/addtodo_task_id"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
		
	<Button 
		android:id="@+id/addtodo_ok_id"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/addtodo_ok_text"
		/>
		
	<Button 
		android:id="@+id/addtodo_cancel_id"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/addtodo_cancel_text"
		/>
	
</LinearLayout>