<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

	<TextView 
		android:id="@+id/main_title_id"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/main_title_text"
		/>
		
	<LinearLayout
		android:id="@+id/main_bottombtns_id"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_alignParentBottom="true"
		android:layout_height="wrap_content"
		>
		
		<Button 
			android:id="@+id/main_addbtn_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/main_addbtn_text"
			/>
			
		<Button 
			android:id="@+id/main_delbtn_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/main_delbtn_text"
			/>
		
	</LinearLayout>
	
	<ListView
		android:id="@+id/main_todolist_id"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/main_title_id"
		android:layout_above="@id/main_bottombtns_id"
		/>
	
</RelativeLayout>
